# procrastinator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: supported_media.py
app/modules/: chatgpt_module.py  messages_module.py  parser_module.py
utils/: messages_module.py
