[tool.poetry]
name = "procastinator"
version = "0.1.0"
description = ""
authors = ["Oscar De Alva <oscar.ivan98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.2"
polars = "^0.19.19"
SQLite4 = "^0.1.1"
openai = "^1.3.7"
ipywidgets = "^8.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
